# video2notes

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  roadmap.md
prompts/: minuta.md
src/video_notas/: __init__.py  audio.py  cli.py  config.py  cost.py  minutes.py  render.py  transcribe.py
