[project]
name = "video-notas"
version = "0.1.0"
description = "Genera minutas y TODO de reuniones a partir de un video usando IA."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.scripts]
video-notas = "video_notas.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
